[DDW-901] Fix news item spacing

--- a/source/renderer/app/components/news/NewsItem.scss
+++ b/source/renderer/app/components/news/NewsItem.scss
@@ -4,7 +4,6 @@
   border-radius: 5px;
   cursor: pointer;
   height: 84px;
-  margin-top: 10px;
   max-height: 107px;
   padding: 20px;
   transition: height 400ms ease;
